# columnar-engine

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
cmake/: dependencies_package.cmake
documents/: coursework.tex  refs.bib  title_kr.tex
exec/: CMakeLists.txt  columnar_to_csv.cpp  csv_to_columnar.cpp  exec_queries.cpp  get_col_from_bzn.cpp
script/: build.sh  convert.sh  run_query.sh
src/: CMakeLists.txt  aggregate.cpp  aggregate.h  batch.cpp  batch.h  column.cpp  column.h  csv-reader.cpp  csv-reader.h  csv-rw.cpp  csv-rw.h  datatype.cpp  datatype.h  expressions.cpp  expressions.h  my-format.cpp  my-format.h  operators.cpp  operators.h  rwconsts.h  schema.cpp  schema.h  types.cpp  types.h
tests/: CMakeLists.txt  bench_rw_hits.cpp  data.csv  schema.csv  test_csv.cpp  test_format.cpp
tests/data/: basic_scheme_lf.csv  basic_test_lf.csv  hits_small_sample.csv
